Add TickThread, changes to starting a game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_subdirectory(libs/Utils/CompilerUtils)
 add_subdirectory(libs/Utils/TimeMeasurement)
 add_subdirectory(libs/Utils/Rng)
 add_subdirectory(libs/Utils/AssetsManager)
+add_subdirectory(libs/Utils/TickThread)
 add_subdirectory(libs/Utils/ThreadSafeQueue)
 add_subdirectory(libs/Utils/External/EasyLogging)
 add_subdirectory(libs/Network/NetworkHandler)
