--- a/libs/Utils/AssetsManager/CMakeLists.txt
+++ b/libs/Utils/AssetsManager/CMakeLists.txt
@@ -10,10 +10,12 @@ set(SOURCES
 add_library(${LIB_NAME} STATIC ${SOURCES})
 
 target_link_libraries(${LIB_NAME}
+                        PUBLIC nlohmann_json::nlohmann_json
                         PUBLIC NetworkHandler
                         PUBLIC Games
                         PRIVATE GamesServer
                         PRIVATE EasyLogging
+                        PRIVATE Base64
 
                         PRIVATE ${ZIPLIB} ${ZIPLIB_BZIP2} ${ZIPLIB_LZMA} ${ZIPLIB_ZLIB}
                       )
