[WIP] Ongoing Kingdomino adaptation, changes to size calculationss
Added blank LUA scripts, added BoardDescription

Changed the way calculations of sprites' size are done - X and Y should
now work properly

--- a/libs/Games/CMakeLists.txt
+++ b/libs/Games/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCES
         Objects/ActionButton.cpp
         Objects/DestinationPoint.cpp
         Objects/Entity.cpp
+        Objects/Tile.cpp
         )
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
