--- a/libs/GamesServer/CMakeLists.txt
+++ b/libs/GamesServer/CMakeLists.txt
@@ -21,7 +21,7 @@ target_link_libraries(${LIB_NAME}
 
                         PUBLIC lua
 
-                        PRIVATE ${ZIPLIB} ${ZIPLIB_BZIP2} ${ZIPLIB_LZMA} ${ZIPLIB_ZLIB}
+                        PRIVATE ZipLib
                       )
 
 target_include_directories(${LIB_NAME}
