--- a/functional_tests/CMakeLists.txt
+++ b/functional_tests/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(LuaTest LuaTest.cpp)
 target_link_libraries(LuaTest PRIVATE lua)
 
 add_executable(ZipLibTest ZipLibTest.cpp)
-target_link_libraries(ZipLibTest PRIVATE ${ZIPLIB} ${ZIPLIB_BZIP2} ${ZIPLIB_LZMA} ${ZIPLIB_ZLIB}
+target_link_libraries(ZipLibTest PRIVATE ZipLib
         sfml-graphics sfml-network sfml-system sfml-window Base64)
 
 add_executable(ImGuiTest ImGuiTest.cpp)
