Changes to run on Windows, create preset for this case
Also, added doxygen comments, still some problems with
`PlametaParser` running on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 
+# Add compiler option for EasyLogging++ to be thread-safe
+ADD_COMPILE_DEFINITIONS(ELPP_THREAD_SAFE)
+
 find_package(SFML COMPONENTS network graphics window system REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(ImGui-SFML CONFIG REQUIRED)
